--- a/etc/logstash/conf.d/system.conf
+++ b/etc/logstash/conf.d/system.conf
@@ -169,6 +169,12 @@ filter {
     }
  
 
+      if [src_ip] !~ /^192\.168\.(0\.([1-9]|[1-9][0-9]|1([0-9][0-9])|2([0-4][0-9]|5[0-5]))|([1-3])\.([0-9]|[1-9][0-9]|1([0-9][0-9])|2([0-4][0-9]|5[0-5])))$/ {
+         mutate {
+           add_field => { "aula" => "Externo a departamento" }
+           add_field => { "tipo_equipo" => "Externo a departamento" }
+         }
+      }
      
 
 
