--- a/etc/kibana/kibana.yml
+++ b/etc/kibana/kibana.yml
@@ -17,3 +17,7 @@ opendistro_security.readonly_mode.roles: ["kibana_read_only"]
 server.host: "0.0.0.0"
 
 elasticsearch.requestTimeout: 90000
+
+server.ssl.enabled: true
+server.ssl.key: /etc/kibana/privkey.pem
+server.ssl.certificate: /etc/kibana/fullchain.pem
